# C6Logger

./: CMakeLists.txt  LICENSE  README.md
include/: Logger.h
src/: Logger.cpp
